--- a/src/about-us/about-us.html
+++ b/src/about-us/about-us.html
@@ -17,7 +17,7 @@
             <div class="about-us-text">
                 <div class="fs36 pb16 blue">Муцуна.орг</div>
                 <div>
-                    Казвам се д-р Нанси Танева – ветеринарен лекар по професия и призвание. В практиката си установих,
+                    Казвам се д-р Нанси Танева - ветеринарен лекар по професия и призвание. В практиката си установих,
                     че въпреки любовта си към животните, много собственици не са осведомени как да се грижат правилно за
                     техните любимци. Направих този портал с идеята да информирам всеки за скритите опасности пред
                     неговия четириног приятел. Надявам се да Ви е от полза.
