--- a/src/adjustment/dog/poisons.html
+++ b/src/adjustment/dog/poisons.html
@@ -145,7 +145,7 @@
 
                     <ul>
                         <li>Родентициди - силно отровни!</li>
-                        <li>Пестициди – силно отровни!</li>
+                        <li>Пестициди - силно отровни!</li>
                         <li>Въглероден оксид (дим) (нервни признаци и др.)</li>
                         <li>Детергенти (домакински препарати)</li>
                         <li>Белина</li>
