--- a/src/growth/cat/pet-years.html
+++ b/src/growth/cat/pet-years.html
@@ -30,7 +30,7 @@
                         <br>
                         Истината е че през първите години от живота си котката старее много по-бързо.
                         След една календарна година след раждането възрастта на котката е приблизително 15 човешки
-                        години, а през втората си година – приблизително 24 човешки години. След това котката остарява с
+                        години, а през втората си година - приблизително 24 човешки години. След това котката остарява с
                         по четири котешки години за всяка календарна година.
                     </p>
 
@@ -81,7 +81,7 @@
                     <div class="fs12 italic p0 center-text">
                         Източник: <a
                             href="https://www.aaha.org/globalassets/02-guidelines/feline-life-stage/felinelifestageguidelines.pdf">
-                            AAFP–AAHA Feline Life Stage Guidelines, cat years to human years
+                            AAFP-AAHA Feline Life Stage Guidelines, cat years to human years
                         </a>
                     </div>
 
@@ -96,7 +96,7 @@
                             <br>
                             Също така, за да нямате проблеми за в бъдеще, е добре да привикнете котето си да свикне с
                             пътуването в кола и с ветеринарните прегледи. (Виж: <a href="./health-care-cat-vet-exam.html">Преглед при ветеринарен лекар</a>). Не
-                            забравяйте и за най-жестоката борба на всички котешки стопани – хапчетата!
+                            забравяйте и за най-жестоката борба на всички котешки стопани - хапчетата!
                             <br>
                             Можете да започнете да приучавате котето си към миенето на зъби. (Виж: <a href="./how-take-care-cat-how-take-care.html">Как да се грижа?</a>)
                             <br>
@@ -141,7 +141,7 @@
                     <div id="stageSeniorCat" class="stage hidden">
                         <div class="fw800">Етап от живота: Зряла котка (7-10 години)</div>
                         <p>
-                            Промените, свързани със стареенето, са изразени – намалена подвижност, дентални проблеми и
+                            Промените, свързани със стареенето, са изразени - намалена подвижност, дентални проблеми и
                             вероятни хронични заболявания.
                             <br>Необходимо е специално внимание към тяхното здраве, диета и комфорт. Препоръчва се
                             котешките вещи и играчки да са в близост до котката, за да има лесен достъп до тях.
