--- a/src/growth/dog/castration.html
+++ b/src/growth/dog/castration.html
@@ -37,7 +37,7 @@
 
                             <h2>Защо се прави?</h2>
                             <p>С възрастта значителна част от женските имат здравословни проблеми като фалшива бременност, пиометра. <strong>Туморните образувания на млечните жлези</strong> са често срещана причина, заради която много често се налага операция, защото с времето те нарастват и съответно могат да дадат метастази във вътрешните органи.</p>
-                            <p>Друго състояние, срещано при некастрираните женски животни, е <strong>фалшивата бременност</strong>, която понякога довежда и до възпаление на млечните жлези (<strong>мастит</strong>). Друг много често срещан проблем е <strong>пиометрата</strong> – представлява възпаление на матката, при което в нея се натрупва гной. Това състояние е животозастрашаващо и се налага спешна оперативна намеса!</p>
+                            <p>Друго състояние, срещано при некастрираните женски животни, е <strong>фалшивата бременност</strong>, която понякога довежда и до възпаление на млечните жлези (<strong>мастит</strong>). Друг много често срещан проблем е <strong>пиометрата</strong> - представлява възпаление на матката, при което в нея се натрупва гной. Това състояние е животозастрашаващо и се налага спешна оперативна намеса!</p>
 
                             <p>За да се избегнат всичко по-горе споменати проблеми, се препоръчва още след първото разгонване или малко преди него женските животни да се кастрират.</p>
 
