--- a/src/growth/dog/pet-years.html
+++ b/src/growth/dog/pet-years.html
@@ -51,11 +51,11 @@
                     календарна година възрастта на кучето е приблизително 30 човешки години. След 12 календарни години
                     кучето е на приблизително 70 човешки години.
                     <br>
-                    Когато се изчислява възрастта на кучето, трябва да се има предвид и каква порода е то – по-големите
+                    Когато се изчислява възрастта на кучето, трябва да се има предвид и каква порода е то - по-големите
                     кучета стареят по-бързо (независимо от факта, че те съзряват по-бавно). С всеки 2 килограма телесна
                     маса продължителността на живота се намалява с по 1 месец. Според учените, които са стигнали до тези
                     изводи с проучването си (<a href="https://www.jstor.org/stable/10.1086/669665"
-                        class="no-dec italic link-underline">„The Size–Life Span Trade-Off Decomposed: Why Large Dogs
+                        class="no-dec italic link-underline">„The Size-Life Span Trade-Off Decomposed: Why Large Dogs
                         Die Young“</a>) това може да се дължи на по-ранната поява на заболявания, свързани с възрастта,
                     и на по-бързия растеж при по-големите породи кучета.
                     </p>
@@ -142,11 +142,11 @@
                         <div class="fw800">Етап от живота: Кутре (0-1 година)</div>
                         <p>
                             Макар че формулата за излисление на кучешките години е подкрепена с лабораторни тестове, тя
-                            има лимитации – тъй като организма расте с бързи темпове до достигане на зрялост е трудно да
+                            има лимитации - тъй като организма расте с бързи темпове до достигане на зрялост е трудно да
                             се органичи с математически изчисления. Независимо от това, можем да сравним кучешкия
                             начален етап с човешкия такъв:
                             <br>
-                            Кученцата започват да виждат на 10-14-ия дни, докато хората – през втората или третата
+                            Кученцата започват да виждат на 10-14-ия дни, докато хората - през втората или третата
                             седмица.
                             <br>
                             Млечните зъби на кученцата започват да се появяват на 3-4-ата седмици след раждането и
@@ -154,9 +154,9 @@
                             появяват през 6-ия месец и да падат през 6-ата или 7-ата години.
                             Кученцата прохождат на 2-3-ата седмици, като придобиват координация на 4-5-а седмици.
                             Хората започват да пълзят през 6-10-ия месеци и започват да ходят между 9-18-ия месеци.
-                            Кучетата достигат полова зрялост през 6-18 месец в зависимост от породата, докато хората –
+                            Кучетата достигат полова зрялост през 6-18 месец в зависимост от породата, докато хората -
                             на 10-14 години.
-                            Кучетата се смятат, че са се развили напълно след 1-3 години, докато хората – на 18-годишна
+                            Кучетата се смятат, че са се развили напълно след 1-3 години, докато хората - на 18-годишна
                             възраст.
                         </p>
 
@@ -248,7 +248,7 @@
                     <div id="stageSeniorDog" class="stage hidden">
                         <div class="fw800">Етап от живота: Възрастно куче</div>
                         <p>
-                            Промените, свързани със стареенето, са изразени – намалена подвижност, дентални проблеми и
+                            Промените, свързани със стареенето, са изразени - намалена подвижност, дентални проблеми и
                             вероятни хронични заболявания.
                             <br>
                             Необходимо е специално внимание към тяхното здраве, диета и комфорт. Препоръчва се кучешките
