--- a/src/how-take-care/cat/language.html
+++ b/src/how-take-care/cat/language.html
@@ -141,11 +141,11 @@
                         Честотата на мъркането (между 25 и 150 Hz) е в диапазона, който според изследванията подпомага:
                     </p>
                     <ul>
-                        <li> Лечението на кости и тъкани – нискочестотните вибрации стимулират възстановяването на
+                        <li> Лечението на кости и тъкани - нискочестотните вибрации стимулират възстановяването на
                             костната плътност и зарастването на рани.</li>
-                        <li> Облекчаване на болката и стреса – мъркането може да намали кръвното налягане и нивата на
+                        <li> Облекчаване на болката и стреса - мъркането може да намали кръвното налягане и нивата на
                             кортизол (хормонът на стреса) при хората.</li>
-                        <li> Подобряване на дишането – има случаи, при които мъркането помага на котки с респираторни
+                        <li> Подобряване на дишането - има случаи, при които мъркането помага на котки с респираторни
                             проблеми, а някои хора с астма твърдят, че се чувстват по-добре около мъркаща котка.</li>
                     </ul>
                     <p>Също така, котките често мъркат, когато са болни или наранени, което предполага, че го използват
