--- a/src/what-for-you/are-you-ready-for-cat/are-you-ready.html
+++ b/src/what-for-you/are-you-ready-for-cat/are-you-ready.html
@@ -154,7 +154,7 @@
                                         </div>
                                         <div class="answer">
                                             <h4>Отговор: Да.</h4>
-                                            <p>Препоръчително е котката да научи своето име, колкото е възможно по-рано, в идеалния случай – още от първия ден. Това е важна стъпка в общуването с любимеца ти, защото основният начин, по който ще привличаш вниманието му и ще го обучаваш, е чрез неговото име.           
+                                            <p>Препоръчително е котката да научи своето име, колкото е възможно по-рано, в идеалния случай - още от първия ден. Това е важна стъпка в общуването с любимеца ти, защото основният начин, по който ще привличаш вниманието му и ще го обучаваш, е чрез неговото име.           
                                             <br> (Виж: <a href="./adjustment-cat-name.html">Приспособяване в новия дом: Избор на име</a>)
                                             </p>
                                             <div class="answer-navigation">
