--- a/src/growth/dog/orphan.html
+++ b/src/growth/dog/orphan.html
@@ -58,7 +58,7 @@
                                     Задължително е обаче млякото, с което ще го храните, да е за кученца! Не трябва да давате човешко, защото то е различно от кучешкото заради различните концентрации на въглехидрати, протеини и мазнини (кученцето има нужда от тези неща, но не в същите количества, както човека).
                                 </p>
                                 <p>
-                                    <span class="blue bold">Преценете</span> на каква възраст е кутрето, колко пъти на ден трябва да се храни и какво количество мляко да му се дава – обикновено във всяка кутия кучешко мляко има информация за тези въпроси.
+                                    <span class="blue bold">Преценете</span> на каква възраст е кутрето, колко пъти на ден трябва да се храни и какво количество мляко да му се дава - обикновено във всяка кутия кучешко мляко има информация за тези въпроси.
                                 </p>
                                 <div class="italic">Линк към полезно видео: <a href="https://www.youtube.com/watch?v=JrvxGIDMGUM&ab_channel=chaskat35">тук</a></div>
                                 <p>
@@ -97,7 +97,7 @@
                                     1)	Прехранване и недохранване
                                 </h4>
                                 <p>
-                                    Прехранването може да резултира в диария, а недохранването – в дехидратация и ненаддаване на тегло.
+                                    Прехранването може да резултира в диария, а недохранването - в дехидратация и ненаддаване на тегло.
                                     Изкуственото мляко може да бъде прекалено гъсто и затова новороденото да се нуждае от допълнително течности. Затова може да се наложи изкуственото мляко да се разреди.
                                 </p>
                                 <h4 class="royal-blue">
@@ -109,7 +109,7 @@
                                 <ul>
                                     <li>под 34.4°C веднага след раждането</li>
                                     <li>35.6°C, когато е на 1-3 дневна възраст</li>
-                                    <li>37.2°C – когато е на възраст 1 седмица.</li>
+                                    <li>37.2°C - когато е на възраст 1 седмица.</li>
                                 </ul>
                                 <p>
                                     При такова състояние то трябва да се затопли, като се затопля с по един градус на час! За да го запомните, си представете как сте навън през студена зимна нощ и около вас има преспи сняг. Вие влизате постепенно в къща, като влизате първо в леко студеното антре, след което в по-топлия хол и накрая се позиционирате около печката. Така и кученцето трябва постепенно да се затопля, с по 1°C на час.
