--- a/src/health-care/dog/deworming.html
+++ b/src/health-care/dog/deworming.html
@@ -27,12 +27,12 @@
 
                     <p>
                         Един от любимите моменти на стопаните с техните питомци са точно ежедневните разходки с
-                        техния четирикрак приятел – махаща опашка и широки крачки, допринасящи и за физическото, и
+                        техния четирикрак приятел - махаща опашка и широки крачки, допринасящи и за физическото, и
                         за емоционалното здраве на двете половини.
                     </p>
                     <p>
                         Колкото и малък да изглежда света тогава, покрай Вас и Вашия любимец има и други същества,
-                        някои - видими, а други – незабележими и чакащи да намерят някой домашен питомник, от който
+                        някои - видими, а други - незабележими и чакащи да намерят някой домашен питомник, от който
                         може да се хранят, а именно говорим за паразитите.
                     </p>
                     <p>
@@ -51,9 +51,9 @@
                         грижим и за здравето си.
                     </p>
                     <p>
-                        <span class="fw900 royal-blue">Домашните ни любимци са като малките деца</span> – разчитат
+                        <span class="fw900 royal-blue">Домашните ни любимци са като малките деца</span> - разчитат
                         на нас да се грижим за тях, което не означава само да ги галим и гушкаме (за съжаление!), но
-                        и да ги защитаваме от неща, които ще им навредят – от паразитите.
+                        и да ги защитаваме от неща, които ще им навредят - от паразитите.
                     </p>
                     <p>
                         За да стане по-ясно какво представляват паразитите, Ви препоръчваме да прочетете по-надолу
@@ -91,7 +91,7 @@
                         <span class="fw900">Ушните</span> и <span class="fw900">кожните кърлежи</span> не са точно
                         както обикновените кърлежи, а са много по-дребни (те се виждат само под микроскоп). Ушните
                         кърлежи причиняват ушна краста (отодектоза), а кожните кърлежи (саркопти, нотоедри и
-                        демодекс) – саркоптоза, нотоедроза и демодекоза – заболявания, които са известни под името
+                        демодекс) - саркоптоза, нотоедроза и демодекоза - заболявания, които са известни под името
                         „кожна краста“. (Виж: <a href="./diseases-parasitic-ear-mites.html">Отодектоза</a>, Саркоптоза, Нотоедроза, <a href="./diseases-parasitic-demodicosis.html">Демодекоза</a>)
                     </p>
 
@@ -283,7 +283,7 @@
                         <br>
                         <p>
                             <span class="fw900 royal-blue">Но защо трябва да обезпаразитявам любимеца си
-                                ежемесечно?</span> Защото някои паразити имат т. нар. биологичен цикъл – т. е. на
+                                ежемесечно?</span> Защото някои паразити имат т. нар. биологичен цикъл - т. е. на
                             по-разбираем език, както едно бебе става дете, тийнейджър и възрастен, то така и от едно
                             яйце на паразит се излюпва ларва, която става възрастен паразит. За този биологичен
                             цикъл трябва време и затова оптималното време, през което може този цикъл да бъде
@@ -418,8 +418,8 @@
                         <div class=""><span class="bold ">Действие</span>: срещу външни паразити (бълхи, кърлежи,
                             въшки, пясъчни и кръвосмучещи мухи)</div>
                         <div class=""><span class="bold ">Описание</span>: Едно третиране предпазва от повторно
-                            опаразитяване с бълхи за 4 седмици, с кърлежи за 3-4 седмици, с пясъчни мухи – 2-4
-                            седмици и с кръвосмучещи мухи – 4 седмици.</div>
+                            опаразитяване с бълхи за 4 седмици, с кърлежи за 3-4 седмици, с пясъчни мухи - 2-4
+                            седмици и с кръвосмучещи мухи - 4 седмици.</div>
                         <div class=""><span class="bold ">Продуктът се използва за лечение на</span>: опаразитяване
                             с въшки.</div>
                         <div class=""><span class="bold ">Възможни неблагоприятни реакции</span>: локален сърбеж и
@@ -485,7 +485,7 @@
 
                         <p class="pimg">
                             <img src="./img/health-care/deworming-med/kiltix-dog.png" class="img300x500">
-                        <div class="fw800">Kiltix – противопаразитна каишка за кучета</div>
+                        <div class="fw800">Kiltix - противопаразитна каишка за кучета</div>
                         <div class=""><span class="bold ">Съдържа</span>: propoxur, flumethrin</div>
                         <div class=""><span class="bold ">Действие</span>: срещу външни паразити (бълхи и кърлежи)
                         </div>
@@ -498,7 +498,7 @@
 
                         <p class="pimg">
                             <img src="./img/health-care/deworming-med/bolfo.png" class="img300x500">
-                        <div class="fw800">Bolfo – противопаразитна каишка за кучета под 10 кг и котки/ за кучета с
+                        <div class="fw800">Bolfo - противопаразитна каишка за кучета под 10 кг и котки/ за кучета с
                             тегло 10-40 кг</div>
                         <div class=""><span class="bold ">Съдържа</span>: propoxur</div>
                         <div class=""><span class="bold ">Действие</span>: срещу външни паразити (бълхи и кърлежи)
@@ -512,7 +512,7 @@
 
                         <p class="pimg">
                             <img src="./img/health-care/deworming-med/foresto-dogs-and-cats.png" class="img300x500">
-                        <div class="fw800">Foresto – противопаразитна каишка за кучета и котки</div>
+                        <div class="fw800">Foresto - противопаразитна каишка за кучета и котки</div>
                         <div class=""><span class="bold ">Съдържа</span>: imidacloprid, flumethrin</div>
                         <div class=""><span class="bold ">Действие</span>: срещу външни паразити (бълхи и кърлежи)
                         </div>
@@ -538,7 +538,7 @@
 
                         <p class="pimg">
                             <img src="./img/health-care/deworming-med/deltatic.png" class="img300x500">
-                        <div class="fw800">Deltatic – противопаразитна каишка за кучета</div>
+                        <div class="fw800">Deltatic - противопаразитна каишка за кучета</div>
                         <div class=""><span class="bold ">Съдържа</span>: deltamethrin</div>
                         <div class=""><span class="bold ">Действие</span>: срещу външни паразити (бълхи и кърлежи),
                             комари, пясъчни мухи</div>
@@ -550,7 +550,7 @@
 
                         <p class="pimg">
                             <img src="./img/health-care/deworming-med/vectra-dogs.jpg" class="img300x500">
-                        <div class="fw800">Vectra – spot-on разтвор за кучета</div>
+                        <div class="fw800">Vectra - spot-on разтвор за кучета</div>
                         <div class=""><span class="bold ">Съдържа</span>: Dinotefuran, pyriproxyfen, permethrin
                         </div>
                         <div class=""><span class="bold ">Действие</span>: срещу външни паразити (бълхи, кърлежи,
@@ -600,7 +600,7 @@
                             кучетата.</div>
                         <div class=""><span class="bold ">Начин на приложение</span>: външно, локално, чрез
                             напръскване.Напръскват се заболелите участъци от разстояние 10-15 cm един път дневно в
-                            продължение на 2–3 дни. След 15 дни процедурата се повтаря.</div>
+                            продължение на 2-3 дни. След 15 дни процедурата се повтаря.</div>
                         </p>
 
                         <p class="pimg">
@@ -814,7 +814,7 @@
                                                 <p class="pimg">
                                                     <img src="./img/health-care/deworming-med/drontal-puppy.png"
                                                         class="img300x500">
-                                                <div class="fw800">Drontal Puppy – перорална суспензия за новородени
+                                                <div class="fw800">Drontal Puppy - перорална суспензия за новородени
                                                     и малки кученца</div>
                                                 <div class=""><span class="bold ">Съдържа</span>: febantel, pyrantel
                                                 </div>
@@ -905,7 +905,7 @@
                                                 <p class="pimg">
                                                     <img src="./img/health-care/deworming-med/panacur-pet-paste.png"
                                                         class="img300x500">
-                                                <div class="fw800">Panacur PetPaste/ Панакюр ПетПейст – перорална
+                                                <div class="fw800">Panacur PetPaste/ Панакюр ПетПейст - перорална
                                                     суспензия за кучета и котки</div>
                                                 <div class=""><span class="bold ">Съдържа</span>: fenbendazole</div>
                                                 <div class=""><span class="bold ">Действие</span>: срещу вътрешни
